--- a/src/Imp/Imp.fsproj
+++ b/src/Imp/Imp.fsproj
@@ -58,6 +58,7 @@
     <PackageReference Include="Fable.Core" Version="4.4.0" />
     <PackageReference Include="Fable.Fetch" Version="2.7.0" />
     <PackageReference Include="Silk.NET.OpenGL" Version="2.22.0" />
+    <PackageReference Include="Silk.NET.OpenGLES" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Windowing" Version="2.22.0" />
     <PackageReference Include="Silk.NET.Input" Version="2.22.0" />
     <PackageReference Include="StbImageSharp" Version="2.30.15" />
